fylo-data-storage-component-master

--- a/index.html
+++ b/index.html
@@ -20,19 +20,28 @@
           <img src="images/logo.svg" alt="">
         </div>
           <div class="icons">
-            <img src="images/icon-document.svg" alt="">
-            <img src="images/icon-folder.svg" alt="">
-            <img src="images/icon-upload.svg" alt="">
+            <div class="icon">
+              <img src="images/icon-document.svg" alt="">
+            </div>
+            <div class="icon">
+              <img src="images/icon-folder.svg" alt="">
+              </div>
+            <div class="icon">
+              <img src="images/icon-upload.svg" alt="">
+              </div>
           </div>
       </div>
       <div class="right-side">
-        <p>You’ve <span>used 815</span> GB of your storage</p>
+        <p>You’ve used<span> 815 GB</span> of your storage</p>
         <div class="shap">
-          <div class="gb"></div>
+          <div class="gb">
+            <div class="circle"></div>
+          </div>
         </div>
         <div class="text">
           <p>0 GB</p>
           <p>1000 GB</p>
+          <div class="gb-left"><span>185</span> GB Left</div>
         </div>
       </div>
     </div>
@@ -53,7 +62,7 @@
 
 
 
-  185 GB Left
+  
   
   
   
